--- a/cropper.css
+++ b/cropper.css
@@ -320,3 +320,15 @@
 .piece3 {
   background-position:-200px -100px
 }
+
+.rotateimg180 {
+  -webkit-transform:rotate(180deg);
+  -moz-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  -o-transform: rotate(180deg);
+  transform: rotate(180deg);
+}
+
+.title {
+  font-size: large;
+}
