--- a/cropper.css
+++ b/cropper.css
@@ -343,6 +343,11 @@
   max-width:60%;
 }
 
+.zine_id {
+  font-size: xxx-large;
+  color: red;
+}
+
 .toolsteps {
   font-size: x-large;
   color: black;
